@@ -47,6 +47,7 @@ THE SOFTWARE.
 #include "flusspferd/exception.hpp"
 #include "flusspferd/function_adapter.hpp"
 #include "flusspferd/function.hpp"
+#include "flusspferd/getopt.hpp"
 #include "flusspferd/modules.hpp"
 #include "flusspferd/init.hpp"
 #include "flusspferd/load_core.hpp"
