@@ -4,6 +4,9 @@ Flusspferd Change Log
 Release 0.7
 -----------
 
+2009-07-30:
+- Add (core) "getopt" plugin and C++ API.
+
 2009-07-19:
 - Remove environment plugin. Env variables are now only available via
   require('system').env (ServerJS compatability)
